--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,11 +13,16 @@
         android:orientation="vertical">
 
         <EditText
+            android:gravity="center"
+            android:hint="이메일"
             android:id="@+id/et_id"
             android:layout_width="200dp"
             android:layout_height="wrap_content" />
 
         <EditText
+            android:gravity="center"
+            android:hint="비밀번호"
+            android:inputType="textPassword"
             android:id="@+id/et_pw"
             android:layout_width="200dp"
             android:layout_height="wrap_content" />
