--- a/app/src/main/res/drawable/plan_item.xml
+++ b/app/src/main/res/drawable/plan_item.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="#FFF9F0"/>
+        android:color="@color/beige"/>
     <corners
         android:radius="20dp"/>
     <size
