--- a/app/src/main/res/layout/activity_community.xml
+++ b/app/src/main/res/layout/activity_community.xml
@@ -12,12 +12,13 @@
         android:layout_height="60dp"
         android:background="#FFFFFF"
         android:gravity="left|center"
-        android:text="   지금떠나"
+        android:text="   커뮤니티"
         android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold"
         android:elevation="8dp"/>
 
+    <!-- 검색 바 -->
     <LinearLayout
         android:id="@+id/searchBar"
         android:layout_width="match_parent"
@@ -28,18 +29,61 @@
         android:gravity="left|center"
         >
 
-        <TextView
-            android:id="@+id/tv_welcome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="어서오세요, "/>
+        <EditText
+            android:id="@+id/searchInput"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="#C2E7FB"
+            android:hint="  검색"
+            android:singleLine="true"
+            android:textColor="#000000"
+            android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
+        <ImageView
+            android:id="@+id/searchIcon"
+            android:layout_width="48dp"
+            android:layout_height="match_parent"
+            android:background="#C2E7FB"
+            android:src="@android:drawable/ic_menu_search"
+            android:contentDescription="Search Icon" />
     </LinearLayout>
+
+    <!-- 게시물 목록 -->
+    <GridView
+        android:id="@+id/gridview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        android:numColumns="2"
+        android:verticalSpacing="8dp"
+        android:horizontalSpacing="8dp"
+        android:layout_below="@id/searchBar"/>
+
+
+    <!-- 게시물 없을 경우 -->
+    <TextView
+        android:id="@+id/emptyView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:visibility="gone"
+        android:textSize="18sp"
+        android:textColor="#808080" />
+
+    <!-- 작성 버튼 -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="75dp"
+        android:contentDescription="게시물 작성"
+        android:src="@drawable/baseline_create_24"
+        android:backgroundTint="#FFF9F0" />
 
     <!-- 하단 네비게이션 바 -->
     <LinearLayout
@@ -59,7 +103,6 @@
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical"
-            android:background="#F5F5F5"
             android:id="@+id/nav_home">
 
             <ImageView
@@ -71,8 +114,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="홈"
-                android:textSize="12sp"
-                android:textStyle="bold" />
+                android:textSize="12sp" />
         </LinearLayout>
 
         <!-- 내 여행 -->
@@ -124,7 +166,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical"
-            android:id="@+id/nav_community"            >
+            android:background="#F5F5F5"
+            android:id="@+id/nav_community">
 
             <ImageView
                 android:layout_width="24dp"
@@ -135,7 +178,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="커뮤니티"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
     </LinearLayout>
