--- a/app/src/main/res/layout/activity_plan_details.xml
+++ b/app/src/main/res/layout/activity_plan_details.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".PlanDetailsActivity">
+    <Button
+        android:id="@+id/btn_create_plandetail"
+        android:text="+"
+        android:textSize="50dp"
+        android:textColor="@color/black"
+        android:background="@drawable/btn_create"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="80dp"
+        android:layout_height="80dp"/>
+<LinearLayout
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context=".PlanDetailsActivity">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:padding="20dp"
         android:orientation="vertical"
@@ -15,7 +30,7 @@
         android:background="@color/beige">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
@@ -29,7 +44,7 @@
 
             <TextView
                 android:id="@+id/date_plan_detail"
-                android:layout_width="wrap_content"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:text="24.01.02 ~ 24.02.03"
@@ -102,5 +117,5 @@
             </FrameLayout>
         </LinearLayout>
 
-    </TabHost>
-</LinearLayout>
+    </TabHost></LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
