--- a/app/src/main/res/layout/activity_plan_details.xml
+++ b/app/src/main/res/layout/activity_plan_details.xml
@@ -7,12 +7,13 @@
     tools:context=".PlanDetailsActivity">
     <Button
         android:id="@+id/btn_create_plandetail"
+        android:gravity="center"
         android:text="+"
         android:textSize="50dp"
         android:textColor="@color/black"
         android:background="@drawable/btn_create"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_margin="20dp"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_width="80dp"
