--- a/app/src/main/res/layout/activity_plan_details_create.xml
+++ b/app/src/main/res/layout/activity_plan_details_create.xml
@@ -92,7 +92,7 @@
             <TextView
                 android:id="@+id/timestart_plandetail_create"
                 android:textSize="20dp"
-                android:text="25/01/01"
+                android:text="00:00"
                 android:inputType="date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -120,7 +120,7 @@
             <TextView
                 android:id="@+id/timeend_plandetail_create"
                 android:textSize="20dp"
-                android:text="25/01/01"
+                android:text="00:00"
                 android:inputType="date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
