--- a/app/src/main/res/layout/activity_plan_details_create.xml
+++ b/app/src/main/res/layout/activity_plan_details_create.xml
@@ -63,7 +63,7 @@
             <TextView
                 android:id="@+id/date_plandetail_create"
                 android:textSize="20dp"
-                android:text="25/01/01"
+                android:text="2025-01-01"
                 android:inputType="date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
