--- a/app/src/main/res/layout/activity_plan_view.xml
+++ b/app/src/main/res/layout/activity_plan_view.xml
@@ -10,7 +10,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:layout_marginBottom="60dp">
 
 <ImageButton
         android:id="@+id/btn_newplan"
