--- a/app/src/main/res/layout/activity_community.xml
+++ b/app/src/main/res/layout/activity_community.xml
@@ -39,12 +39,13 @@
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:visibility="visible"
         android:numColumns="2"
         android:verticalSpacing="8dp"
         android:horizontalSpacing="8dp"
-        android:layout_below="@id/searchBar"/>
+        android:layout_below="@id/searchBar"
+        android:layout_above="@id/navigationBar"/>
 
 
     <!-- 게시물 없을 경우 -->
